crates/plotnik-tests/tests/04-emit/types/fields/error_nullable_value_via_ref.txt
Maybe = (identifier)?
Q = (variable_declarator name: (Maybe))
------------------ DIAGNOSTICS -------------------
error: grammar field `name` cannot match a sequence
 --> query.ptk:2:32
  |
1 | Maybe = (identifier)?
  | --------------------- `Maybe` is defined here
2 | Q = (variable_declarator name: (Maybe))
  |                                ^^^^^^^
  |
help: a grammar field holds one child node. Match one pattern, or move the sequence outside the grammar-field constraint
